[gd_scene load_steps=2 format=3 uid="uid://btkeixeq5foot"]

[ext_resource type="Script" uid="uid://c8atuyo7r8gd5" path="res://ui/ui.gd" id="1_nb4k0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Title"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
